--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ env:
   - FRAMEWORK_NAME=Tapestry
 before_install:
 - brew update
-- brew outdated danger/tap/danger-swift || brew upgrade danger/tap/danger-swift
+- brew install danger/tap/danger-swift 
 - brew outdated carthage || brew upgrade carthage
 before_deploy:
 - carthage build --no-skip-current --platform iOS --cache-builds
