--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,4 @@ deploy:
   file: "$FRAMEWORK_NAME.framework.zip"
   skip_cleanup: true
   on:
-    repo: fortmarek/Tapestry
+    repo: AckeeCZ/Tapestry
