Experimental generation project.

--- a/Example/tapestryExample.xcodeproj/xcshareddata/xcschemes/tapestryExample.xcscheme
+++ b/Example/tapestryExample.xcodeproj/xcshareddata/xcschemes/tapestryExample.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "9999"
+   LastUpgradeVersion = "1010"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,24 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "Tapestry::Tapestry"
-               BuildableName = "Tapestry"
-               BlueprintName = "Tapestry"
-               ReferencedContainer = "container:Tapestry.xcodeproj">
-            </BuildableReference>
-         </BuildActionEntry>
-         <BuildActionEntry
-            buildForTesting = "YES"
-            buildForRunning = "YES"
-            buildForProfiling = "YES"
-            buildForArchiving = "YES"
-            buildForAnalyzing = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "Tapestry::TapestryGen"
-               BuildableName = "TapestryGen.framework"
-               BlueprintName = "TapestryGen"
-               ReferencedContainer = "container:Tapestry.xcodeproj">
+               BlueprintIdentifier = "1E82F27C2680AE8B494546B8"
+               BuildableName = "tapestryExample.app"
+               BlueprintName = "tapestryExample"
+               ReferencedContainer = "container:tapestryExample.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -42,17 +28,11 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "Tapestry::TapestryTests"
-               BuildableName = "TapestryTests.xctest"
-               BlueprintName = "TapestryTests"
-               ReferencedContainer = "container:Tapestry.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
       </Testables>
+      <AdditionalOptions>
+      </AdditionalOptions>
+      <CodeCoverageTargets>
+      </CodeCoverageTargets>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
@@ -64,6 +44,22 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "1E82F27C2680AE8B494546B8"
+            BuildableName = "tapestryExample.app"
+            BlueprintName = "tapestryExample"
+            ReferencedContainer = "container:tapestryExample.xcodeproj">
+         </BuildableReference>
+      </BuildableProductRunnable>
+      <CommandLineArguments>
+      </CommandLineArguments>
+      <EnvironmentVariables>
+      </EnvironmentVariables>
+      <AdditionalOptions>
+      </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -71,6 +67,16 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "1E82F27C2680AE8B494546B8"
+            BuildableName = "tapestryExample.app"
+            BlueprintName = "tapestryExample"
+            ReferencedContainer = "container:tapestryExample.xcodeproj">
+         </BuildableReference>
+      </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
