🔧 Fix deploy workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
         run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
       - name: Archive
         run: | 
-          mv "${swift build --show-bin-path --configuration release --product tapestry}/tapestry" .
+          mv "`swift build --show-bin-path --configuration release --product tapestry`/tapestry" .
           export FRAMEWORK_PATH=`swift build --show-bin-path --configuration release --product PackageDescription`
           zip -r tapestry-${{ steps.get_version.outputs.VERSION }}.zip LICENSE tapestry $FRAMEWORK_PATH/PackageDescription.swiftdoc $FRAMEWORK_PATH/PackageDescription.swiftmodule $FRAMEWORK_PATH/libPackageDescription.dylib
       - uses: xresloader/upload-to-github-release@v1
