--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,4 +16,5 @@ jobs:
       - name: Create a new release
         uses: fortmarek/tapestry-action@master
         env:
+          RELEASE_ACTOR: tapestrybot 
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
